--- a/package.json
+++ b/package.json
@@ -19,11 +19,18 @@
   },
   "homepage": "https://github.com/trdoan/app-chat-realtime#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
+    "sequelize": "^6.18.0",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.4.1",
     "wrtc": "^0.4.7"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
