--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "nodemon": "^2.0.15",
     "sequelize": "^6.18.0",
     "simple-peer": "^9.11.1",
-    "socket.io": "^4.4.1",
-    "wrtc": "^0.4.7"
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
